[gd_scene load_steps=19 format=3 uid="uid://d1jvsfypljqq7"]

[ext_resource type="Script" path="res://Scripts/menu.gd" id="1_wuxxj"]
[ext_resource type="Texture2D" uid="uid://w4uevn7obhnj" path="res://assets/background/Free Pixel Art Forest/Preview/Background.png" id="2_gmtxb"]
[ext_resource type="FontFile" uid="uid://b304kctevhwix" path="res://font/PixelifySans-VariableFont_wght.ttf" id="3_e3n47"]
[ext_resource type="Texture2D" uid="uid://dlwcwj4off3k7" path="res://assets gg/Lightning Mage/Idle.png" id="4_mjj6f"]

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_rhiyw"]

[sub_resource type="Theme" id="Theme_4ipr2"]
Button/colors/font_color = Color(0.258824, 0.513726, 0.521569, 1)
Button/colors/font_hover_color = Color(0.140005, 0.353309, 0.352109, 1)
Button/constants/outline_size = 3
Button/styles/disabled = SubResource("StyleBoxEmpty_rhiyw")
Button/styles/focus = SubResource("StyleBoxEmpty_rhiyw")
Button/styles/hover = SubResource("StyleBoxEmpty_rhiyw")
Button/styles/normal = SubResource("StyleBoxEmpty_rhiyw")
Button/styles/pressed = SubResource("StyleBoxEmpty_rhiyw")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_nu1su"]

[sub_resource type="Theme" id="Theme_2n0sv"]
Button/colors/font_color = Color(1, 1, 1, 1)
Button/colors/font_hover_color = Color(0.0901961, 0.247059, 0.247059, 1)
Button/constants/outline_size = 3
Button/styles/disabled = SubResource("StyleBoxEmpty_nu1su")
Button/styles/focus = SubResource("StyleBoxEmpty_nu1su")
Button/styles/hover = SubResource("StyleBoxEmpty_nu1su")
Button/styles/normal = SubResource("StyleBoxEmpty_nu1su")
Button/styles/pressed = SubResource("StyleBoxEmpty_nu1su")

[sub_resource type="StyleBoxEmpty" id="StyleBoxEmpty_17dpp"]

[sub_resource type="Theme" id="Theme_0rxg7"]
Button/colors/font_color = Color(0.631373, 0.631373, 0.631373, 1)
Button/constants/outline_size = 3
Button/styles/disabled = SubResource("StyleBoxEmpty_17dpp")
Button/styles/focus = SubResource("StyleBoxEmpty_17dpp")
Button/styles/hover = SubResource("StyleBoxEmpty_17dpp")
Button/styles/normal = SubResource("StyleBoxEmpty_17dpp")
Button/styles/pressed = SubResource("StyleBoxEmpty_17dpp")

[sub_resource type="AtlasTexture" id="AtlasTexture_bsybt"]
atlas = ExtResource("4_mjj6f")
region = Rect2(0, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_pfx0o"]
atlas = ExtResource("4_mjj6f")
region = Rect2(128, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_1800q"]
atlas = ExtResource("4_mjj6f")
region = Rect2(256, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_r8avg"]
atlas = ExtResource("4_mjj6f")
region = Rect2(384, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_0npf2"]
atlas = ExtResource("4_mjj6f")
region = Rect2(512, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_ljc6c"]
atlas = ExtResource("4_mjj6f")
region = Rect2(640, 64, 128, 64)

[sub_resource type="AtlasTexture" id="AtlasTexture_mivid"]
atlas = ExtResource("4_mjj6f")
region = Rect2(768, 64, 128, 64)

[sub_resource type="SpriteFrames" id="SpriteFrames_wxykw"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_bsybt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pfx0o")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_1800q")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8avg")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_0npf2")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_ljc6c")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_mivid")
}],
"loop": true,
"name": &"default",
"speed": 7.0
}]

[node name="Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_wuxxj")

[node name="Background" type="Sprite2D" parent="."]
modulate = Color(1, 1, 1, 0.862745)
position = Vector2(578, 202.25)
scale = Vector2(1.24353, 1.12295)
texture = ExtResource("2_gmtxb")

[node name="play" type="Button" parent="."]
layout_mode = 0
offset_left = 46.0
offset_top = 222.0
offset_right = 231.0
offset_bottom = 291.0
theme = SubResource("Theme_4ipr2")
theme_override_colors/font_outline_color = Color(0.113725, 0.121569, 0.168627, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_e3n47")
theme_override_font_sizes/font_size = 50
text = "Play"

[node name="levelCustomize" type="Button" parent="."]
layout_mode = 0
offset_left = 35.0
offset_top = 296.0
offset_right = 422.0
offset_bottom = 365.0
theme = SubResource("Theme_2n0sv")
theme_override_colors/font_outline_color = Color(0.113725, 0.121569, 0.168627, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_e3n47")
theme_override_font_sizes/font_size = 50
text = "Create level"

[node name="options" type="Button" parent="."]
layout_mode = 0
offset_left = 85.0
offset_top = 368.0
offset_right = 279.0
offset_bottom = 437.0
theme = SubResource("Theme_2n0sv")
theme_override_colors/font_outline_color = Color(0.113725, 0.121569, 0.168627, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_e3n47")
theme_override_font_sizes/font_size = 50
text = "Options
"

[node name="exit" type="Button" parent="."]
layout_mode = 0
offset_left = 83.0
offset_top = 437.0
offset_right = 185.0
offset_bottom = 506.0
theme = SubResource("Theme_0rxg7")
theme_override_colors/font_outline_color = Color(0.113725, 0.121569, 0.168627, 1)
theme_override_constants/outline_size = 10
theme_override_fonts/font = ExtResource("3_e3n47")
theme_override_font_sizes/font_size = 50
text = "Exit
"

[node name="logo" type="Label" parent="."]
modulate = Color(1, 1, 1, 0.862745)
layout_mode = 0
offset_left = 20.0
offset_top = 45.0
offset_right = 536.0
offset_bottom = 210.0
theme_override_colors/font_color = Color(0.259731, 0.514515, 0.522595, 1)
theme_override_colors/font_shadow_color = Color(0, 0, 0, 1)
theme_override_colors/font_outline_color = Color(0, 0, 0, 1)
theme_override_constants/outline_size = 15
theme_override_fonts/font = ExtResource("3_e3n47")
theme_override_font_sizes/font_size = 100
text = "QuizRush"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
position = Vector2(1081.25, 530.5)
scale = Vector2(1.65234, 1.39063)
sprite_frames = SubResource("SpriteFrames_wxykw")
autoplay = "default"
frame_progress = 0.975018

[connection signal="pressed" from="play" to="." method="_on_play_pressed"]
[connection signal="pressed" from="levelCustomize" to="." method="_on_level_customize_pressed"]
[connection signal="pressed" from="options" to="." method="_on_options_pressed"]
[connection signal="pressed" from="exit" to="." method="_on_exit_pressed"]
